--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yuribenjamin.github.io/my-app",
+  "homepage": "http://yuribenjamin.github.io/sorting-visualizer",
   "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
